# data-interface-library

./: .gitignore  CMakeLists.txt  README.md  data_interface.hpp
graph/dfs/: linked_stack.ipp  sequential_stack.ipp
graph/examples/: graph_dense.cpp
